menu layout overflow problem fixed, but must be cleaned and improved

--- a/frontend/assets/sass/classes/_menus.scss
+++ b/frontend/assets/sass/classes/_menus.scss
@@ -1,13 +1,16 @@
 .menu-1 {
   background: linear-gradient(160deg, #cfcfcf, #eaeaea);
   box-shadow: -2px -2px 4px #acacac;
+  opacity: 0;
+
+  transition: opacity 200ms;
 
   position: absolute;
-  z-index: 1000;
+  z-index: 10;
   bottom: 0;
   right: 0;
   transform: translate(0, 100%);
-  
+
   height: fit-content;
   width: fit-content;
 
@@ -25,15 +28,12 @@
 
     &.extensible {
       position: relative;
+
       .menu_suboptions{
           position: absolute;
-          z-index: 10;
           top: -20px;
-          right: 0;
           transform: translate(100%, 0);
           box-shadow: 2px 2px 4px #acacac !important;
-          height: fit-content;
-          width: fit-content;
           max-height: 100px;
           overflow-y: auto;
           overflow-x: hidden;
@@ -72,6 +72,9 @@
     top: 20px !important;
     left: 0 !important;
     transform: translate(-100%, -100%) !important;
+  }
+  .normal, &.normal{
+    opacity: 1;
   }
 }
 
